# check-pfda

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml  setup.py
autograding/: utl_AutograderError.py  utl_autograder.py
autograding/utils/: autograder.py
docs/: documentation.md
linting/: requirements.txt
manual_grading/: README.md  RUNME.py
manual_grading/guis/: gui_main.py
manual_grading/utils/: utl_write_team_students_csv.py
requirements/: requirements.txt
src/check_pfda/: cli.py  config.yaml  core.py  utils.py
src/check_pfda/.config/: config.yaml
src/check_pfda/utils/: http.py  test_helpers.py
