[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "check-pfda"
version = "0.0.1"
description = "PFDA test running package."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Click",
    "pytest",
    "requests"
]

[project.scripts]
check = "pfda_tester.src.cli:run_test"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
