[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "check-pfda"
version = "0.0.1"
description = "PFDA test running package."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Click",
    "pytest",
    "requests"
]

[project.scripts]
check = "src.check-pfda.cli:check_code"
check-instructor = "src.check-pfda.cli:admin"

[tool.setuptools]
include-package-data = true

#[tool.setuptools.packages.find]
#where = ["."]

[tool.pydoclint]
style = 'sphinx'
exclude = '\.git|\.venv'
